добавлена авторизация + документация, фиксы и улучшение логики
